# TennisRacketSwingweightPrediction

./: LICENSE  LICENSE.txt  README.md  SwingweightAproximator.ipynb  evaluation.py  models.py  pyproject.toml  racquets.csv  requirements.txt  statistical_approximation.ipynb  tab_transformer.py  twu.tennis-warehouse.com.json
data/: racquet_data.csv
experiment_results/: gan_results.md
notebooks/: raquet_gan.ipynb
src/tennisracketswingweightprediction/: __about__.py  __init__.py  evaluation.py
src/tennisracketswingweightprediction/modules/: gan_trainer.py  models.py  torch_preprocessing.py
